--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
       pip install -r requirements.txt
     startCommand: |
       python manage.py migrate
-      python manage.py shell -c "from django.contrib.auth import get_user_model; User = get_user_model(); User.objects.create_superuser('admin', 'admin@example.com', 'temporarypassword123') if not User.objects.filter(username='admin').exists() else None"
+      python manage.py createsuperuser --noinput || true
       gunicorn backend.wsgi:application
     envVars:
       - key: PYTHON_VERSION
@@ -26,7 +26,9 @@ services:
       - key: DJANGO_SUPERUSER_EMAIL
         value: admin@example.com
       - key: DJANGO_SUPERUSER_PASSWORD
-        value: temporarypassword123
+        generateValue: true
+      - key: SECRET_KEY
+        generateValue: true
 
 databases:
   - name: medical-innovation-pod-db
