--- a/render.yaml
+++ b/render.yaml
@@ -26,7 +26,7 @@ services:
       - key: DJANGO_SUPERUSER_EMAIL
         value: admin@example.com
       - key: DJANGO_SUPERUSER_PASSWORD
-        generateValue: true
+        value: "MedInnovate2024!"
       - key: SECRET_KEY
         generateValue: true
 
